# q

./: .gitignore  MANIFEST.in  README.md  REFACTORING_SUMMARY.md  port_killer.sh  portkill.sh  pyproject.toml  q.py  requirements.txt  setup.py  test_permission.py
prompts/: base_system_prompt.md  command_execution_prompt.md  context_prompt.md
q_cli/: __init__.py  example_config.conf
q_cli/assets/: __init__.py  base_system_prompt.md  command_result_prompt.md
q_cli/cli/: __init__.py  args.py  client_init.py  context_setup.py  conversation.py  dry_run.py  llm_setup.py  main.py  session_handlers.py  updates.py
q_cli/config/: __init__.py  commands.py  context.py  manager.py  providers.py
q_cli/io/: __init__.py  config.py  input.py  output.py
q_cli/prompts/: base_system_prompt.md  command_result_prompt.md
q_cli/utils/: __init__.py  client.py  commands.py  constants.py  context.py  helpers.py  pdf.py  permissions.py  permissions_context.py  prompts.py  provider_factory.py  web.py
q_cli/utils/session/: __init__.py  manager.py
scripts/: create_service_account.sh  run_tests.sh
tests/: README.md  __init__.py  conftest.py
tests/cli/: __init__.py  test_args.py  test_context_confirmation.py  test_context_setup.py  test_dry_run.py  test_llm_setup.py  test_main.py  test_updates.py
tests/config/: __init__.py  test_config_manager.py
tests/io/: __init__.py  test_input.py
tests/utils/: __init__.py  test_client.py  test_commands.py  test_helpers.py  test_permissions.py  test_prompts.py  test_provider_factory.py
