[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "q"
version = "0.5.5"
description = "A quick AI assistant CLI for asking questions"
authors = [{name = "Mauro", email = "mauro@sauco.net"}]
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Utilities",
]
dependencies = [
    "anthropic>=0.18.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
]

[project.scripts]
q = "q:main"

[project.urls]
"Homepage" = "https://github.com/transparentlyai/q"
"Bug Tracker" = "https://github.com/transparentlyai/q/issues"