[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "q-cli-assistant"
version = "0.9.0.75"
description = "A command Line AI Assistant for interacting with Claude"
authors = [{name = "Mauro", email = "mauro@transparently.ai"}]
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Utilities",
]
dependencies = [
    "anthropic>=0.18.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "tiktoken>=0.9.0",
    "colorama>=0.4.6",
]

[project.scripts]
q = "q_cli:main"

[project.urls]
"Homepage" = "https://github.com/transparentlyai/q"
"Bug Tracker" = "https://github.com/transparentlyai/q/issues"

[tool.setuptools]
py-modules = ["q"]
packages = ["q_cli", "q_cli.cli", "q_cli.io", "q_cli.utils", "q_cli.assets"]

[tool.setuptools.package-data]
q_cli = ["assets/*.md", "example_config.conf"]
