[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "q-cli-assistant"
version = "0.9.0.83"
authors = [
  { name="Mauro Comi", email="mauro@transparently.ai" },
]
description = "Q - A CLI Assistant powered by Claude"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["q_cli"]

dependencies = [
    "anthropic>=0.5.0",
    "click>=8.1.3",
    "colorama>=0.4.6",
    "python-dotenv>=1.0.0",
    "requests>=2.28.2",
    "tiktoken>=0.4.0",
    "rich>=13.3.5",
    "pyyaml>=6.0",
    "beautifulsoup4>=4.12.2",
    "html2text>=2020.1.16",
    "pyperclip>=1.8.2",
]

[project.scripts]
q = "q_cli.main:main"

[project.urls]
"Homepage" = "https://github.com/transparentlyai/q"
"Bug Tracker" = "https://github.com/transparentlyai/q/issues"